--- a/style.css
+++ b/style.css
@@ -109,11 +109,18 @@ span {
 }
 
 button {
+  font-family: "DM Sans";
   color: #fff;
   padding: 1.6rem;
   border: none;
   border-radius: 4px;
   background: #ff9500;
+  font-weight: 700;
+}
+
+button:hover{
+  background: #d37c02;
+  cursor: pointer;
 }
 
 @keyframes rotetion {
